--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -35,7 +35,8 @@
 
     <EditText
         android:id="@+id/etDownLongClick"
-        style="@style/Config.Edittext" />
+        style="@style/Config.Edittext"
+        android:imeOptions="actionDone" />
 
     <Button
         android:id="@+id/btSave"
