--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -1,47 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        style="@style/Config.TextTitle"
-        android:text="@string/up_click" />
-
-    <EditText
-        android:id="@+id/etUpClick"
-        style="@style/Config.Edittext" />
-
-    <TextView
-        style="@style/Config.TextTitle"
-        android:text="@string/up_long_click" />
-
-    <EditText
-        android:id="@+id/etUpLongClick"
-        style="@style/Config.Edittext" />
-
-    <TextView
-        style="@style/Config.TextTitle"
-        android:text="@string/down_click" />
-
-    <EditText
-        android:id="@+id/etDownClick"
-        style="@style/Config.Edittext" />
-
-    <TextView
-        style="@style/Config.TextTitle"
-        android:text="@string/down_long_click" />
-
-    <EditText
-        android:id="@+id/etDownLongClick"
-        style="@style/Config.Edittext"
-        android:imeOptions="actionDone" />
-
-    <Button
-        android:id="@+id/btSave"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/save" />
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+            style="@style/Config.TextTitle"
+            android:text="@string/up_click" />
+
+        <EditText
+            android:id="@+id/etUpClick"
+            style="@style/Config.Edittext" />
+
+        <TextView
+            style="@style/Config.TextTitle"
+            android:text="@string/up_long_click" />
+
+        <EditText
+            android:id="@+id/etUpLongClick"
+            style="@style/Config.Edittext" />
+
+        <TextView
+            style="@style/Config.TextTitle"
+            android:text="@string/down_click" />
+
+        <EditText
+            android:id="@+id/etDownClick"
+            style="@style/Config.Edittext" />
+
+        <TextView
+            style="@style/Config.TextTitle"
+            android:text="@string/down_long_click" />
+
+        <EditText
+            android:id="@+id/etDownLongClick"
+            style="@style/Config.Edittext"
+            android:imeOptions="actionDone" />
+
+        <Button
+            android:id="@+id/btSave"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save" />
+    </LinearLayout>
+</ScrollView>
